--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 	<link rel="stylesheet" href="css/main.css">
 	<title>Reto Lyft</title>
 </head>
-<body>
-	
+<body class="grad70">
+	<main class="container-flex-column">
+	  <div class="container">
+		  <div class="row">
+			  <div class="col-xs-12">
+				  <img class="img-responsive logo"src="assets/img/logo-white.png" alt="gif">
+			  </div>
+		  </div>
+	  </div>
+	</main>
 	<script src="vendors/jquery/jquery-3.2.1.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
