añade segunda vista

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<title>Reto Lyft</title>
 </head>
-<body class="grad70">
+<body class="backgr">
 	<main class="container-flex-column">
 	  <div class="container">
 		  <div class="row">
